Minor refactoring on AuthenticationCallbakUT